[project]
name = "ncnodes"
description = "NODES: NC Audio Recorder, NC Line Counter, NC Increment INT, NC Image Processor"
version = "1.2.2"
license = {file = "LICENSE"}
dependencies = ["ffmpeg-python", "transparent_background"]

[project.urls]
Repository = "https://github.com/Siempreflaco/ComfyUI-NCNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ncreature"
DisplayName = "ComfyUI-NCNodes"
Icon = ""
