[project]
name = "ncnodes"
description = "NODES: Audio Recorder, Line Counter, Increment INT, Image Processor, Load 3D Mesh From Outputs"
version = "1.2.3"
license = {file = "LICENSE"}
dependencies = ["ffmpeg-python", "transparent_background"]

[project.urls]
Repository = "https://github.com/Siempreflaco/ComfyUI-NCNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ncreature"
DisplayName = "ComfyUI-NCNodes"
Icon = ""
